# AnderCAD

./: .gitignore  CMakeLists.txt  README.md  sample.mkv  测试Transform功能说明.md
cad_app/: CMakeLists.txt
cad_app/src/: main.cpp
cad_core/: CMakeLists.txt
cad_core/include/cad_core/: BooleanOperations.h  CommandManager.h  CreateBoxCommand.h  CreateCylinderCommand.h  CreateSphereCommand.h  FilletChamferOperations.h  ICommand.h  OCAFDocument.h  OCAFManager.h  Point.h  SelectionManager.h  Shape.h  ShapeFactory.h  TransformCommand.h
cad_core/src/: BooleanOperations.cpp  CommandManager.cpp  CreateBoxCommand.cpp  CreateCylinderCommand.cpp  CreateSphereCommand.cpp  FilletChamferOperations.cpp  OCAFDocument.cpp  OCAFManager.cpp  Point.cpp  SelectionManager.cpp  Shape.cpp  ShapeFactory.cpp  TransformCommand.cpp
cad_feature/: CMakeLists.txt
cad_feature/include/cad_feature/: ExtrudeFeature.h  Feature.h  FeatureManager.h  LivePreview.h  LoftFeature.h  ParameterPanel.h  RevolveFeature.h  SweepFeature.h
cad_feature/src/: ExtrudeFeature.cpp  Feature.cpp  FeatureManager.cpp  LivePreview.cpp  LoftFeature.cpp  ParameterPanel.cpp  RevolveFeature.cpp  SweepFeature.cpp
cad_sketch/: CMakeLists.txt
cad_sketch/include/cad_sketch/: Constraint.h  ConstraintSolver.h  Sketch.h  SketchArc.h  SketchCircle.h  SketchElement.h  SketchLine.h  SketchPoint.h  SnappingManager.h
cad_sketch/src/: Constraint.cpp  ConstraintSolver.cpp  Sketch.cpp  SketchArc.cpp  SketchCircle.cpp  SketchElement.cpp  SketchLine.cpp  SketchPoint.cpp  SnappingManager.cpp
cad_ui/: CMakeLists.txt
cad_ui/include/cad_ui/: AboutDialog.h  BooleanOperationDialog.h  CreateHoleDialog.h  CreatePrimitiveDialog.h  DocumentTree.h  ExportDialog.h  FaceSelectionDialog.h  FilletChamferDialog.h  MainWindow.h  PropertyPanel.h  QtOccView.h  SketchMode.h  StatusBar.h  ThemeManager.h  ToolBar.h  TransformOperationDialog.h
cad_ui/resources/: resources.qrc  styles.qss
cad_ui/src/: AboutDialog.cpp  BooleanOperationDialog.cpp  CreateHoleDialog.cpp  CreatePrimitiveDialog.cpp  DocumentTree.cpp  ExportDialog.cpp  FaceSelectionDialog.cpp  FilletChamferDialog.cpp  MainWindow.cpp  PropertyPanel.cpp  QtOccView.cpp  SketchMode.cpp  StatusBar.cpp  ThemeManager.cpp  ToolBar.cpp  TransformOperationDialog.cpp
